# Porkpie

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  STATUS.md  bugs.md  docker-compose.yml  porkpie-desktop-0.1.0-x86_64.wxs  porkpie_long_horizon_security_worklist.md  porkpie_longhaul_security_followup_worklist.md  porkpie_no_excuses_execution_protocol.md  porkpie_remaining_longhaul_fixes.md  porkpie_windows_ssh_agent_mandate.md  porkpie_worklist.md
.github/workflows/: ci.yml
AGENT WORKLIST/: 00_GLOBAL_RULES.md  PHASE_01_CI_AND_STATUS_HONESTY.md  PHASE_03_STRENGTHEN_CRYPTO_MODEL.md  PHASE_05_FIX_CLI_AROUND_PIE_URIS.md  PHASE_06_MAKE_UI_REAL_RUST_DIOXUS.md  PHASE_07_MAKE_DESKTOP_AND_WEB_LAUNCHABLE.md  PHASE_11_IMPORT_EXPORT_SAFETY.md  PHASE_12_FINAL_HOSTILE_QA.md
FIxit/: 00_GLOBAL_RULES.md  00_MASTER_BINDING.md  INDEX.md  ISSUE_MATRIX.md  PHASE_01_CONFIG_AND_SECRET_ARTIFACTS.md  PHASE_02_DEBUG_REDACTION_AND_SECRET_STATE.md  PHASE_03_CLI_SECRET_INPUT_HARDENING.md  PHASE_04_WEB_STORAGE_AND_DOC_TRUTH.md  PHASE_05_SERVER_ITEM_ID_INTEGRITY.md  PHASE_06_SYNC_CONFLICT_AND_STRATEGY_SAFETY.md  PHASE_07_API_CORS_AND_PAYLOAD_HARDENING.md  PHASE_08_DOCS_AND_README_TRUTH_PASS.md  PHASE_09_QA_TEST_EXPANSION.md  PHASE_10_FINAL_HOSTILE_REAUDIT.md  porkpie_remaining_hostile_qa_worklist.md
apps/desktop/: Cargo.toml
apps/desktop/src/: launch_config.rs  lib.rs  main.rs  tray.rs
apps/desktop/tests/: desktop_integration.rs
apps/desktop/wix/: main.wxs
apps/server/: Cargo.toml
apps/server/src/: lib.rs
apps/web/: Cargo.toml  build-web.ps1  index.html  test-web.ps1
apps/web/src/: launch.rs  lib.rs  main.rs
crates/porkpie-agent/: Cargo.toml
crates/porkpie-agent/src/: agent.rs  in_memory_signer.rs  lib.rs  policy.rs  signer.rs  windows_pipe.rs
crates/porkpie-api/: Cargo.toml  Dockerfile  docker-compose.yml
crates/porkpie-api/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/porkpie-api/tests/: api.rs  api_key_security.rs  bidirectional_sync.rs
crates/porkpie-cli/: Cargo.toml
crates/porkpie-cli/src/: errors.rs  interactive.rs  lib.rs  main.rs  secret_store.rs  session.rs
crates/porkpie-cli/src/commands/: add.rs  copy.rs  delete.rs  edit.rs  export.rs  get.rs  import.rs  init.rs  keychain.rs  list.rs  lock.rs  mod.rs  read.rs  recovery_cmd.rs  run_cmd.rs  ssh.rs  sync.rs  unlock.rs  vault_cmd.rs  write.rs
crates/porkpie-cli/tests/: cli.rs  pie_uri.rs  recovery_roundtrip.rs  windows_agent.rs
crates/porkpie-core/: Cargo.toml
crates/porkpie-core/src/: errors.rs  item.rs  lib.rs  models.rs  password_gen.rs  state.rs  vault.rs
crates/porkpie-core/tests/: item_crud.rs  password_gen.rs  state.rs  vault_lifecycle.rs
crates/porkpie-crypto/: Cargo.toml
crates/porkpie-crypto/src/: constants.rs  encryption.rs  errors.rs  key_derivation.rs  lib.rs  nonce.rs  vault_key.rs
crates/porkpie-crypto/tests/: crypto_tests.rs  fuzz_tests.rs
crates/porkpie-import/: Cargo.toml
crates/porkpie-import/src/: csv.rs  encrypted_backup.rs  errors.rs  lib.rs  validators.rs
crates/porkpie-import/tests/: backup.rs  csv.rs
crates/porkpie-store/: Cargo.toml
crates/porkpie-store/src/: db.rs  errors.rs  item_store.rs  lib.rs  migrations.rs  models.rs  sync_state.rs  vault_store.rs
crates/porkpie-store/tests/: concurrent.rs  constraints.rs  plaintext_proof.rs  store.rs
crates/porkpie-store/tests/common/: mod.rs
crates/porkpie-sync/: Cargo.toml
crates/porkpie-sync/src/: conflict.rs  errors.rs  lib.rs  protocol.rs  state.rs
crates/porkpie-sync/tests/: sync.rs
crates/porkpie-types/: Cargo.toml
crates/porkpie-types/src/: aad.rs  constants.rs  errors.rs  field_access.rs  ids.rs  item_type.rs  lib.rs  pie_uri.rs  secret_key.rs  timestamp.rs  vault.rs
crates/porkpie-types/tests/: debug_redaction.rs  errors.rs  fuzz_tests.rs  serialization.rs  types.rs
crates/porkpie-ui/: Cargo.toml
crates/porkpie-ui/src/: app.rs  lib.rs  settings_store.rs  state.rs  tray.rs  vault_store.rs
crates/porkpie-ui/src/components/: button.rs  form.rs  item_list.rs  mod.rs  modal.rs  password_input.rs  text_input.rs
crates/porkpie-ui/src/pages/: db_error.rs  detail.rs  import_export.rs  list.rs  mod.rs  onboarding.rs  password_gen.rs  settings.rs  unlock.rs
crates/porkpie-ui/src/utils/: clipboard.rs  mod.rs  secret_key_storage.rs  validation.rs
crates/porkpie-ui/tests/: components.rs  navigation.rs  vault_store.rs
docs/: 00_MASTER_AGENT_BINDING.md  AGENT_TASKS.md  ARCHITECTURE.md  AUDIT_REPORT.md  COMPLETION_GATE.md  CRYPTO_FORMAT.md  DATA_MODEL.md  DESKTOP_WINDOWS_QA.md  FIxit_COMPLETION_REPORT.md  KEYCHAIN.md  MASTER_VERIFICATION_HIT_LIST.md  PHASE_02_REMOVE_SECURITY_FOOTGUNS.md  PHASE_04_PROVE_LOCAL_STORAGE_NO_PLAINTEXT.md  PHASE_08_MAKE_SYNC_REAL.md  PHASE_09_BUILD_SSH_AGENT_FOUNDATION.md  PHASE_10_HARDEN_API.md  PRODUCT_SPEC.md  QA_NOTES.md  ROADMAP.md  SECURITY_INVARIANTS.md  SSH_AGENT_WINDOWS.md  SSH_AGENT_WINDOWS_QA.md  STATUS.md  SYNC_PROTOCOL.md  TEST_PLAN.md  THREAT_MODEL.md  TRUST_GATE.md  feature-production-readiness-1.0.md  infra_task.md
infra/caddy/: Caddyfile
infra/compose/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
infra/docker/: README.md  server.Dockerfile
plan/: feature-production-readiness-1.0.md  porkpie_worklist.md
tasks/: Porkpie Architecture and Coding Plan.md  Porkpie Implementation Plan.md  Porkpie Rust-First Agent Task Queue.md  README.md  TASK-01-workspace-scaffold.md  TASK-02-security-architecture-docs.md  TASK-03-core-types.md  TASK-04-crypto.md  TASK-05-vault-core.md  TASK-06-storage.md  TASK-07-cli.md  TASK-08-ui.md  TASK-09-sync.md  TASK-10-final.md
