[package]
name = "porkpie-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
