[package]
name = "porkpie-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "porkpie-server"
path = "src/main.rs"

[dependencies]
porkpie-sync = { path = "../porkpie-sync" }
porkpie-types = { path = "../porkpie-types" }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
