[package]
name = "porkpie-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "porkpie"
path = "src/main.rs"

[dependencies]
porkpie-agent = { path = "../porkpie-agent" }
porkpie-core = { path = "../porkpie-core" }
porkpie-import = { path = "../porkpie-import" }
porkpie-store = { path = "../porkpie-store" }
porkpie-sync = { path = "../porkpie-sync" }
porkpie-types = { path = "../porkpie-types" }
porkpie-crypto = { path = "../porkpie-crypto" }
arboard = "3.6"
atty = "0.2"
sha2 = "0.10"
hex = "0.4"
secrecy = "0.8"
zeroize = "1.8"
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", optional = true }

[features]
default = ["keychain"]
keychain = ["keyring"]
experimental-recovery = []

[dev-dependencies]
