[package]
name = "porkpie-import"
version = "0.1.0"
edition = "2021"

[dependencies]
porkpie-core = { path = "../porkpie-core" }
porkpie-types = { path = "../porkpie-types" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
porkpie-store = { path = "../porkpie-store" }
