[package]
name = "porkpie-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest = "1.5"
