[package]
name = "porkpie-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
porkpie-core = { path = "../porkpie-core" }
porkpie-types = { path = "../porkpie-types" }
dioxus = "0.4"
dioxus-router = "0.4"
getrandom = { version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["js"] }
web-sys = { version = "0.3", features = ["Storage", "Window"] }
porkpie-import = { path = "../porkpie-import" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6"
porkpie-import = { path = "../porkpie-import" }
porkpie-store = { path = "../porkpie-store" }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
